force-app/main/default/objects/OpportunityLineItem/fields/Applied_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Applied_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bundle that added this product (if applicable)</description>
    <label>Applied Bundle</label>
    <referenceTo>Applied_Bundle__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>