force-app/main/default/objects/OpportunityLineItem/fields/Bundle_Savings__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Savings__c</fullName>
    <description>The amount off the list price when this product is added as part of a bundle.</description>
    <label>Bundle Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>