force-app/main/default/objects/OpportunityLineItem/fields/Bundle_Savings_old__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Savings_old__c</fullName>
    <description>Managed by flow: Update Opportunity Line Quantity, Discount and Price</description>
    <label>ZDeprecateBundle Savings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>