force-app/main/default/objects/OpportunityLineItem/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Copies Family from Product onto Opportunity Line Item via Process Builder, used for Roll-up and Flow.</inlineHelpText>
    <label>Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>