force-app/main/default/objects/OpportunityLineItem/fields/Due_at_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Due_at_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Product on this line item is fully due at checkout. Maintained in a before-save flow.</description>
    <label>Due at Checkout</label>
    <type>Checkbox</type>
</CustomField>