force-app/main/default/objects/OpportunityLineItem/fields/fw1__ProductName__c.field-meta.xml
<CustomField>
    <fullName>fw1__ProductName__c</fullName>
    <formula>PricebookEntry.Product2.Name</formula>
    <label>ProductName</label>
    <type>Text</type>
</CustomField>