force-app/main/default/objects/OpportunityLineItem/fields/fw2__Recurring__c.field-meta.xml
<CustomField>
    <fullName>fw2__Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>