force-app/main/default/objects/OpportunityLineItem/fields/No_Bundle_Savings__c.field-meta.xml
<CustomField>
    <fullName>No_Bundle_Savings__c</fullName>
    <formula>if (OR
  (AND (Product_Code__c = &quot;ASP&quot;,Price_Book__c = &quot;01s4P000004AvF6&quot;),
  NOT( ISNULL(Price_Book__r.Pricing_Version__c) )) ,
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZDeprecateNo Bundle Savings</label>
    <type>Checkbox</type>
</CustomField>