force-app/main/default/objects/OpportunityLineItem/fields/Partial_Amount_Due_At_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Partial_Amount_Due_At_Checkout__c</fullName>
    <description>Contains the partial amount due at checkout for the Product on this line item. Maintained via a before-save flow.</description>
    <label>Partial Amount Due At Checkout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>