force-app/main/default/objects/OpportunityLineItem/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>(ListPrice *  Quantity) -   Bundle_Savings_new__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates Total Price = Total - Bundle Savings</inlineHelpText>
    <label>ZDeprecatePrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>